2009-03-17  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::octave_value): Move to ov.h
	* ov.h (octave_value::octave_value): Implement fast inline constructor
	using a static rep.

2009-03-15  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellslices): New DLD function.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::compound_binary_op): Support bool compound ops.
	* ov.cc (do_binary_op, decompose_binary_op, binary_op_fcn_name):
	Ditto.
	* pt-cbinop.cc (strip_not, simplify_and_or_op): New funcs.
	(maybe_compound_binary_expression): Support bool compound ops.
	* OPERATORS/op-int.h: Support bool compound ops.
	* OPERATORS/op-b-bm.cc: Ditto.
	* OPERATORS/op-bm-b.cc: Ditto.
	* OPERATORS/op-bm-bm.cc: Ditto.
	* OPERATORS/op-fm-fm.cc: Ditto.
	* OPERATORS/op-m-m.cc: Ditto.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (xpow (const NDArray&, double), xpow (const ComplexNDArray&, double),
	xpow (const FloatNDArray&, float), xpow (const FloatComplexNDArray&,
	float)): Use xisint for testing ints. Optimize w.r.t int exponents.

2009-03-13  John W. Eaton  <jwe@octave.org>

	* parse.y (maybe_warn_assign_as_truth_value, make_binary_op,
	maybe_warn_variable_switch_label, maybe_warn_associativity_change): 
	Print file and line number info if available.
	* lex.l (gripe_matlab_incompatible): Likewise.

	* error.cc (pr_where): Use octave_call_stack::backtrace to print
	complete stack trace at once.  Don't attempt to print code.
	(error_2): Set error_state to 0 before calling pr_where.
	(warning_1): Switch sense of test on symbol_table::at_top_level.
	Call pr_where after printing primary warning message.

2009-03-13  Jaroslav Hajek  <highegg@gmail.com>

	* ov-range.h (octave_range::octave_range (const Range&)): Allow
	constructing from invalid range op result.
	* ov-range.cc (octave_range::try_narrowing_conversion): Validate
	invalid range op results.